--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "mmm": "0.2.1",
     "nodemailer": "0.5.2",
     "redis": "0.8.5",
-    "pg": "2.8.4",
-    "jade": "~1.6.0",
-    "connect-jade": "0.0.4"
+    "sendgrid": "~1.2.0"
   }
 }
